--- a/index.html
+++ b/index.html
@@ -80,15 +80,22 @@
 		</section>
 
 		<section>
-		  <h2>How?</h2>
-		  <ul>
+		<section>
+		  <h2>Technologies/Architecture</h2>
+		  <img src="img/flow.png">
+		</section>
+
+		  <section>
+			<h2>How?</h2>
+			<ul>
 			  <li> deal with raw geo-data (source: osm)
 			  <li> webgl abstraction
 			  <li> easy to use api for visualization
 				<ul>
 				  <li> cross-referenceing data
 				</ul>
-		  </ul>
+			</ul>
+		  </section>
 		</section>
 
 		<section>
