--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		</section>
 
 		<section>
-		  <h2>Further Extensional</h2>
+		  <h2>Further Extensions</h2>
 		  <ul>
 			<li>GPS integration
 			<li>texture integration
